feat: implement Twitch bot commands for distance and weather reporting

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ NOMINATIM_EMAIL=hugo.combe.84@gmail.com
 NOMINATIM_LANGUAGE=fr
 # Set to false to disable reverse geocoding
 REVERSE_GEOCODE=true
+
+DB_PATH=
+
+#Twitch Bot Configuration
+TWITCH_OAUTH_TOKEN=
+TWITCH_BOT_USERNAME=
+TWITCH_CHANNEL=
