--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "scripts": {
     "start": "node src/init.js"
   },
-  "keywords": ["owntracks", "websocket", "express", "gps", "overlay"],
+  "keywords": [
+    "owntracks",
+    "websocket",
+    "express",
+    "gps",
+    "overlay"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -15,6 +21,7 @@
     "express": "^5.2.1",
     "node-fetch": "^3.3.2",
     "sqlite3": "^5.1.7",
+    "tmi.js": "^1.8.5",
     "tz-lookup": "^6.1.25",
     "ws": "^8.18.3"
   }
